sglist.h: Fix sg_refs signedness to match refcount(9)

PR:		220122
Reported by:	Mark Millard <markmi at dsl-only.net>
Sponsored by:	Dell EMC Isilon

Former-commit-id: 82acd0e94d58bc4c693f8ecedbb4ed8d5242d092